kubernetes/services/jellyfin/service.jellyfin.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: 8096
